20_rot_matrix/grade.txt
Grading at Wed Feb 20 09:39:28 UTC 2019
Attempting to compile rotate.c
rotate.c: In function ‘rotate’:
rotate.c:8:32: error: expected ‘)’ before ‘;’ token
       printf("%c", matrix[j][i];
                                ^
rotate.c:9:7: error: expected ‘;’ before ‘}’ token
       }
       ^
The code did not compile!

Overall Grade: F
